@@ -14,6 +14,11 @@ dpkg (1.16.2) UNRELEASED; urgency=low
   * Remove versioned coreutils Pre-Depends from dpkg due to the ancient
     md5sum transition. Reported by Bill Allombert <ballombe@debian.org>.
     Closes: #643746
+  * Change dpkg-architecture to only compute the requested variables. This:
+    - Fixes the bootstrapping problem, as the dpkg build system only needs
+      the host architecture, for which dpkg itself is not required.
+    - Reduces the amount of work performed, including loading and parsing
+      unnecessary table files or calling either of gcc or dpkg programs.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
